Add a dialect test for Date
We need to add an --add-opens option to the JVM flags
because Spark uses some sun.util.calendar classes that
are not accessible by default starting from Java 9.

We've fixed it for the tests but we're probably going
to run into this at deploy time too :(